# aviation_rag

./: README.md  pyproject.toml
aviation_rag/: c172_embeddings.csv  rag_pipeline_mlx.ipynb  text_chunk_embeddings.npy
